--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/styles/variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Open Sans', sans-serif;
+}
+
+body {
+    background-color: $color-primary-light;
+}
+
+input {
+    font-size: 14px;
+    padding: 8px;
+    border-radius: 2px;
+
+    border: 1px solid $color-neutral-4;
+}
+
+label {
+    font-size: 14px;
+    font-weight: 600;
+    color: $color-black;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+}
